demo-spring-feign/yaml/server-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-server
spec:
  hosts:
    - demo-server
  http:
    - route:
      - destination:
          host: demo-server
          subset: v1
        weight: 100
      mirror:
        host: demo-server
        subset: v2
      mirror_weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-server
spec:
  host: demo-server
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
