demo-spring-feign/yaml/vsvc-server-end-user.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-server
spec:
  hosts:
    - demo-server
  http:
    - match:
      - headers:
          end-user:
            exact: tiger
      route:
        - destination:
            host: demo-server
            subset: v1
    - route:
      - destination:
          host: demo-server
          subset: v2
        weight: 50
      - destination:
          host: demo-server
          subset: v3
        weight: 50
