demo-spring-feign/yaml/vsvc-server-fault-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-server
spec:
  hosts:
    - demo-server
  http:
    - fault:
        delay:
          fixedDelay: 5s
          percentage:
            value: 100
      match:
      - headers:
          end-user:
            exact: tiger
      route:
        - destination:
            host: demo-server
            subset: v1
    - route:
      - destination:
          host: demo-server
